# -hr-managmentSystem

./: License  README.md  app.py  pyproject.toml  requirements.txt  run.py
forms/: registeration_form.py
helpers/: admin.py  files.py
models/: candidate.py  department.py
resourses/: routes.py
