[tool.poetry]
name = "hrms-flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-RESTful = "^0.3.9"
python-dotenv = "^0.19.1"
mariadb = "^1.0.7"
Flask-SQLAlchemy = "^2.5.1"
mysql-connector = "^2.2.9"
Flask-Bcrypt = "^0.7.1"
Werkzeug = "^2.0.2"
aniso8601 = "^9.0.1"
bcrypt = "^3.2.0"
cffi = "^1.15.0"
click = "^8.0.3"
colorama = "^0.4.4"
greenlet = "^1.1.2"
itsdangerous = "^2.0.1"
Jinja2 = "^3.0.2"
MarkupSafe = "^2.0.1"
pycparser = "^2.20"
pytz = "^2021.3"
six = "^1.16.0"
SQLAlchemy = "^1.4.25"
Flask-Migrate = "^3.1.0"
PyMySQL = "^1.0.2"
mysqlclient = "^2.0.3"
Flask-WTF = "^0.15.1"
WTForms = "^2.3.3"
flask-file-upload = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
